BUILT IN Lavaplayer Compatability